--- a/lms/users/templates/manager/edit_user.html
+++ b/lms/users/templates/manager/edit_user.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block header %}
+{% endblock %}
 {% block content %}
 <div class="container mx-auto px-4 py-8">
     <!-- Page Header -->
